# THE_ROAD_TO_AI

./: .gitignore  CHAPTER_PROMPT_TEMPLATE.md  README.md
agent-from-zero/: .env.example  .gitignore  Dockerfile  README.md  design.md  pyproject.toml
agent-from-zero/docs/: chapter_01_environment.md  chapter_02_llm_basics.md  chapter_03_langchain_basics.md  chapter_04_tool_calling.md  chapter_05_rag_basics.md  chapter_06_langgraph_basics.md  chapter_07_langgraph_advanced.md  chapter_08_multi_agent.md  chapter_09_langsmith_tracing.md  chapter_10_langsmith_evaluation.md  chapter_11_api_and_ui.md  chapter_12_production.md  langsmith_tracing_guide.md  production_checklist.md
agent-from-zero/examples/: 01_simple_llm.py  02_raw_llm_call.py  02_structured_output.py  03_tool_calling.py  04_rag_qa.py  05_basic_langgraph.py  06_human_in_loop.py  07_langsmith_tracing.py  07_multi_agent.py  08_evaluation.py
agent-from-zero/scripts/: ingest_docs.py  run_api.py  run_graph.py  run_ui.py
agent-from-zero/src/agent_from_zero/: __init__.py
agent-from-zero/src/agent_from_zero/api/: main.py  routers.py  schemas.py
agent-from-zero/src/agent_from_zero/chains/: simple_chat.py  structured_output.py  summarizer.py
agent-from-zero/src/agent_from_zero/config/: settings.py
agent-from-zero/src/agent_from_zero/evaluation/: datasets.py  evaluators.py  run_eval.py
agent-from-zero/src/agent_from_zero/graphs/: basic_graph.py  human_review_graph.py  multi_agent_graph.py  rag_graph.py  state.py
agent-from-zero/tests/: test_chains.py  test_graphs.py  test_rag.py  test_tools.py
(+257 files in other folders)
